<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, SimpleCalendar!</string>
    <string name="app_name">SimpleCalendarImp</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="none"></string>
</resources>
